# narou-scraper

./: .gitignore  narou_download.py  pyproject.toml  retrieve_novel_list.py  retrieve_novels.py
