[tool.poetry]
name = "narou-scraper"
version = "0.1.0"
description = "narou scraping script"
authors = ["Wtaru-Nakata <wataru9871@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
beautifulsoup4 = "^4.10.0"
parse = "^1.19.0"
jsonlines = "^2.0.0"
tqdm = "^4.62.3"
XlsxWriter = "^3.0.2"
requests = "^2.26.0"
openpyxl = "^3.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
